# DADDy

./: README.md
include/: IO.h  aul_solver.h  constants.h  daddy.h  ddp_solver.h  derivation.h  dynamics.h  integration.h  linalg.h  parameters.h  pn_solver.h  settings.h  solver.h  visualisation.h
script/: main.cpp
script/runtime_analysis/: CMakeLists.txt  run_runtime_analysis.cpp  runtime_analysis.cpp  runtime_analysis.h
script/test_cases/: CMakeLists.txt  cr3bp_EARTH_MOON_low_thrust_haloL2_to_haloL1.cpp  cr3bp_EARTH_MOON_lt_dro_to_dro.cpp  cr3bp_EARTH_MOON_lt_haloL2_to_haloL1.cpp  cr3bp_EARTH_MOON_lt_lyapunovL1_to_lyapunovL2.cpp  cr3bp_EARTH_MOON_lt_nrho_to_dro.cpp  double_integrator.cpp  low-thrust_2bp_SUN.cpp  low-thrust_cr3bp.cpp  tbp_EARTH_lt_leo_to_geo.cpp  tbp_EARTH_lt_leo_to_leo.cpp  tbp_EARTH_lt_meo_to_meo.cpp  tbp_SUN_low_thrust_earth_to_mars.cpp  tbp_SUN_lt_earth_to_mars.cpp  test_cases.cpp  test_cases.h
source/: IO.cpp  aul_solver.cpp  constants.cpp  daddy.cpp  ddp_solver.cpp  derivation.cpp  dynamics.cpp  integration.cpp  linalg.cpp  parameters.cpp  pn_solver.cpp  solver.cpp  visualisation.cpp
source/visualisation/: IO.py  classes.py  main.py  plot_2d.py  plot_3d.py  plot_double_integrator.py  plot_keplerians.py  plot_thrust_profile.py
test/: test_aul_solver.cpp  test_constants.cpp  test_daddy.cpp  test_ddp_solver.cpp  test_derivation.cpp  test_dynamics.cpp  test_integration.cpp  test_linalg.cpp  test_parameters.cpp  test_pn_solver.cpp  test_solver.cpp
